# buildFFmpegSo

./: .gitignore  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ming/buildffmpegso/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h
app/src/main/cpp/media/decoder/video/: v_decoder.cpp
app/src/main/cpp/media/player/def_player/: player.cpp  player.h
app/src/main/java/com/ming/buildffmpegso/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ming/buildffmpegso/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
